Add -i/-o flags and %scala line magic, update prototype docs
Magic enhancements:
- Add -i var1,var2 flag to push Python variables into Scala
- Add -o var1,var2 flag to pull Scala variables back to Python
- Add %scala single-line magic alongside existing %%scala cell magic
- Parse flags via shlex for robust argument handling

Documentation rewrite:
- Document SPCS OAuth authentication (no PAT needed in Workspace)
- Add Key Learnings table covering all issues resolved during
  development (System.getenv caching, --add-opens for Arrow,
  SLF4J binding, transient vs temp tables, etc.)
- Document magic flags with examples
- Expand troubleshooting table with all known error scenarios
- Update architecture table to reflect current state

Co-authored-by: Cursor <cursoragent@cursor.com>